--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 <body>
 	<div class="container">
 		<div class="page-header">
-			<h1>Tree</h1>
+			<h1>Tree of objects</h1>
+		</div>
+		<div class="button-group">
+			<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+			<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 		</div>
 		<ul class="box main">
 		</ul>
